unpackaged/objects/scormanywhere__ViewTrac_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Disable_CreatedById_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_CreatedById_Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Content_Storage__c</fullName>
        <label>Content Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_For_All_External_Users__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Default value for Enable For All External Users field in the Media object</inlineHelpText>
        <label>Enable For All External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_For_All_Internal_Users__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Default value for Enable For All Internal Users field in the Media object</inlineHelpText>
        <label>Enable For All Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__External_Service__c</fullName>
        <label>External Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Min_PDF_Page_View_Time__c</fullName>
        <label>Min PDF Page View Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ViewTrac Settings</label>
</CustomObject>